# pm_dashboard

./: .gitignore  MANIFEST.in  README.md  dashboard_api.md  pyproject.toml
examples/: run.py
pm_dashboard/: config.py  data_logger.py  database.py  pm_dashboard.py  utils.py  version.py
pm_dashboard/www/: asset-manifest.json  index.css  index.html
pm_dashboard/www/static/css/: main.6042ea15.css  main.6042ea15.css.map  main.702785bb.css  main.702785bb.css.map  main.7d8e003a.css  main.7d8e003a.css.map  main.8848a358.css  main.8848a358.css.map  main.91c96fec.css  main.91c96fec.css.map  main.c2e98378.css  main.c2e98378.css.map
pm_dashboard/www/static/js/: main.04f0349c.js  main.061cc284.js  main.0a9dfb25.js  main.0b911d90.js  main.11929308.js  main.15d4a65a.js  main.1f14c837.js  main.2dd6e30c.js  main.2ea88783.js  main.345e5e12.js  main.35848add.js  main.39bb27ee.js  main.477f8e78.js  main.4925da66.js  main.53a5c435.js  main.53a5c435.js.LICENSE.txt  main.562cef82.js  main.57da80ac.js  main.6277f0f8.js  main.65ea30b1.js  main.74e5783a.js  main.74e5783a.js.map  main.88eabd24.js  main.891e2c40.js  main.99b1a29e.js  main.9aa1195f.js  main.9f55a84b.js  main.9f7d2453.js  main.a0adbe00.js  main.ae475c87.js  main.b91b4986.js  main.b91b4986.js.LICENSE.txt  main.bce2bf98.js  main.bddb37d2.js  main.cc5b60ca.js  main.d8629c7b.js  main.d8dfa39a.js  main.ddb23763.js  main.dee2d5c7.js  main.e10a493c.js  (+3 more)
